thesis/yaml/exa-frontend/exa-frontend-pod-cannot-access.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exa-frontend-p-no-access
  #labels:
    #access-exa: "true" # -> without this label, access will fail
spec:
  containers:
    - image: docker.io/deutschmann/exa-frontend
      name: exa-frontend
      ports:
        - containerPort: 8000
          name: http
          protocol: TCP
  automountServiceAccountToken: false # no service account needed
