thesis/yaml/exa-frontend/exa-frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exa-frontend-p
  labels:
    # to allow network access to exa-backend
    # (enforced by network policy)
    access-exa: "true"
spec:
  containers:
    - image: docker.io/deutschmann/exa-frontend
      name: exa-frontend
      ports:
        - containerPort: 8000
          name: http
          protocol: TCP
  automountServiceAccountToken: false # SA disabled
